--- a/onlinexamination/templates/exam/index.html
+++ b/onlinexamination/templates/exam/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 {% load static %}
-<html lang="en" dir="ltr">
+<html lang="en" dir="ltr" style="height: 100%;">
 
 <style>
-  .jumbotron{
-    margin-bottom: 0px;
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+  }
+
+  .jumbotron {
+    margin-bottom: 0;
   }
 </style>
-<body>
+
+<body style="height: 100%;">
   {% include "exam/navbar.html" %}
-<br>
-<section id="section-jumbotron" class="jumbotron jumbotron-fluid d-flex justify-content-center align-items-center">
-  <div class="container text-center">
-    <h2 class="display-3 text-info">Online Examination System</h2>
-    <p class="display-4 d-none d-sm-block">Attend your examinations online!</p>
-    <p class="lead">Sign Up now to start your first online examination</p>
-
-  
-    <p><strong> Start Your Journey Here:</strong></p>
-    <a href="/student/studentsignup" class="btn btn-lg btn-info" style="padding-right: 35px; border-radius: 0%;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Sign Up as Student</a>
-    
-    <br><br><br>
-  </div>  
-</section>
+  <br>
+  <section class="h d-flex justify-content-center align-items-center" style="height: 100%;">
+    <div class="container text-center">
+      <h2 class="display-3 text-info">Online Sınaq Sistemi</h2>
+      <p class="display-4 d-none d-sm-block">İmtahanlarınızda onlayn iştirak edin!</p>
+      <p class="lead">İlk onlayn imtahanınıza başlamaq üçün indi qeydiyyatdan keçin</p>
+      <a href="/student/studentsignup" class="btn btn-lg btn-info" style="padding-right: 35px; border-radius: 0%;"><i class="fa fa-graduation-cap" aria-hidden="true"></i> Qeydiyyatdan keçin</a>
+    </div>
+  </section>
   {% include "exam/footer.html" %}
-
-
 </body>
 
 </html>
