--- a/onlinexamination/templates/teacher/teacher_add_question.html
+++ b/onlinexamination/templates/teacher/teacher_add_question.html
@@ -18,7 +18,7 @@
   </style>
 </head>
 <h2 style="text-align:center;">Add Question</h2>
-<form method="POST" autocomplete="off" style="margin:100px;margin-top: 0px;">
+<form method="POST" enctype="multipart/form-data" autocomplete="off" style="margin:100px;margin-top: 0px;">
     {%csrf_token%}
     <div class="form-group">
         <label for="question">Course</label>
